Update 13th nov 2020.md

--- a/Documentación/Bitacoras/13th nov 2020.md
+++ b/Documentación/Bitacoras/13th nov 2020.md
@@ -2,6 +2,6 @@ After a discussion with the Team´s Mentor, the project´s vision was narrowed t
 This description should be properly redefined.
 
 **Pending:**
-*Define system and user requirements
-*Define a short Scrum framework
-*Gather techincal information on how to create a bot
+* Define system and user requirements.
+* Define a short Scrum framework.
+* Gather techincal information on how to create a bot.
