--- a/Documentación/Bitacoras/22th nov 2020.md
+++ b/Documentación/Bitacoras/22th nov 2020.md
@@ -1,9 +1,9 @@
 On team session we redefined the project vision after realizing that there is already an existing solution to one of the 2 main problems we discovered, time management.
 
 So far the evolution of our descriptions have been:
-* Create a program to help students learn contents of Geomtry and Software Engineering Fundamentals, automation tasks involving pdfs and more
+* Create a program to help students learn contents of Geometry and Software Engineering Fundamentals, automation tasks involving pdfs and more
 * Create a bot on Slack to help students on time management and Geometry contents
-* Create a website with contents of Geomtry and Software Engineering Fundamentals (This is the most recent one)
+* Create a website with contents of Geometry and Software Engineering Fundamentals (This is the most recent one)
 
 Also we proposed some intial requirements such as:
 * La página debe tener pestañas: Geometría, FIS y About us. (Functional)
