--- a/Documentación/Bitacoras/24th-25th nov 2020.md
+++ b/Documentación/Bitacoras/24th-25th nov 2020.md
@@ -1,3 +1,3 @@
-Today we accomplish advances in the first increment document and finish the tracking and metrics documents, we could establish our 
-path for excel in the presentation of our product. We also discuss key points in our ideas for the product and set them in the documentation
+Today we accomplished advances in the first increment document and finished the tracking and metrics documents, we also established our 
+path for excel in the presentation of our product. We also discussed key points in our ideas for the product and set them in the documentation
 and made many commitments in the GitHub repository.
