--- a/Documentation/Binnacles/19th dec 2020.md
+++ b/Documentation/Binnacles/19th dec 2020.md
@@ -3,4 +3,4 @@ Today we successfully concluded one of our tasks. As a team, we finished working
 # Links
 
 - [Interactive prototype](https://www.figma.com/proto/CYd8ym0jVD3PjarlkyM5Dx/Osiris?node-id=7%3A31&scaling=min-zoom)
-- [Prototype PDF](Second%20increment/GUI%20Design.pdf)
+- [Prototype PDF](../../Second%20increment/GUI%20Design.pdf)
