Update 21th dec 2020.md

--- a/Documentation/Binnacles/21th dec 2020.md
+++ b/Documentation/Binnacles/21th dec 2020.md
@@ -1,5 +1,4 @@
-Today I focus on reviewing the wireframe and making the form, also communicate with some undergraduate students in software engineering and organize a meeting to explain the dynamics, once the users completed the form, invite them to comment on their observations, it should be mention that the collected information was productive.
+Today we reviewed the wireframe and developed the form for the acceptance tests, we also contacted 6 undergraduate students in software engineering to make the form and organized a meeting to clarify doubts and give directions in which they participated regarding the form, once the users completed the form, they were invited to comment on their observations, it’s worth mentioning that the information collected was productive.
 
 # Pending
-
-* Finish applying the webapp form (acceptance test) and the 5 second test.
+* Finish applying the webapp form (proof of acceptance) and schedule the meeting for the 5 second test.
