--- a/Documentation/Binnacles/23th dec 2020.md
+++ b/Documentation/Binnacles/23th dec 2020.md
@@ -1,4 +1,4 @@
 Today the drafting of the test section was completed, the information was added to the document of the second increment and corrections were made to the test section. Likewise, the Subject proficiencies was completed
 # Pending.
-* Make the prototype Settings.
+* Make the Wireframe.
 
