--- a/Documentation/Binnacles/23th dec 2020.md
+++ b/Documentation/Binnacles/23th dec 2020.md
@@ -1,4 +1,4 @@
-Today the drafting of the test section was completed, the information was added to the document of the second increment and corrections were made to the test section. Likewise, the Subject proficiencies was completed
-# Pending.
-* Make the Wireframe.
+The drafting of the *Testing* section of the document was completed, corrections were made and the information was added to the second increment document. Likewise, the *Subject proficiencies* section was also completed.
 
+# Pending.
+* Finish the wireframe
