--- a/Documentation/Binnacles/22th dec 2020.md
+++ b/Documentation/Binnacles/22th dec 2020.md
@@ -1,3 +1,4 @@
-The missing surveys for the acceptance test were applied today, the 5 second test was performed and the drafting of the testing findings began. That same day we met with the mentor to show him the progress of the documentation and the prototype of our project, during the meeting we talked about the aspects that we can improve and recommended other tools that we can use to make adjustments and changes to the document and prototype.
+The remaining surveys for the acceptance testing were carried out today. The "five seconds" tests were performed and the drafting of the *Testing* section of the document began. We also met with the mentor to show him the progress of the documentation and the prototype of our project, during the meeting we talked about the aspects that we can improve and he recommended other tools that we can use to make adjustments to the prototype.
+
 # Pending
-* Make the Wireframe and add the test data to the second increment document.
+* Assess the feedback and finish the wireframe.
