--- a/Documentation/Binnacles/21th dec 2020.md
+++ b/Documentation/Binnacles/21th dec 2020.md
@@ -1,4 +1,4 @@
-Today we reviewed the wireframe and developed the form for the acceptance tests, we also contacted 6 undergraduate students in software engineering to make the form and organized a meeting to clarify doubts and give directions in which they participated regarding the form, once the users completed the form, they were invited to comment on their observations, it’s worth mentioning that the information collected was productive.
+Today we reviewed the wireframe and made a survey for the acceptance tests. For this, we contacted 6 software engineering students to take said survey and organized a meeting with them to clarify doubts and give directions. Once the users completed the survey, they were invited to comment on their observations.
 
 # Pending
-* The webapp form ended (tests of acceptance) and schedule the meeting for the 5 second test.
+* Schedule a meeting with the participants for the "five seconds" tests.
