Update 23th dec 2020.md

--- a/Documentation/Binnacles/23th dec 2020.md
+++ b/Documentation/Binnacles/23th dec 2020.md
@@ -1,4 +1,4 @@
 The drafting of the *Testing* section of the document was completed, corrections were made and the information was added to the second increment document. Likewise, the *Subject proficiencies* section was also completed.
 
-# Pending.
+# Pending
 * Finish the wireframe
