Update 17th jan 2021.md

--- a/Documentation/Binnacles/17th jan 2021.md
+++ b/Documentation/Binnacles/17th jan 2021.md
@@ -1,6 +1,6 @@
-Today we could finish our high-fidelity prototype. I think we learned a lot today and recognize the effort that takes to realize all this iterations and finally get a well done work-product.
+Today we finished our high-fidelity prototype. We think we learned a lot today and recognize the effort that takes to carry out all these iterations and finally get a well done work-product.
 
-We last like 6 hours beginning with the first animations of some of the frames and organizing all the different components that we were using. At the end we organized all the frames that were used according to its functionality.
+We lasted 6 hours, starting with the first animations of some of the frames and organizing all the different components that we were using. At the end we organized all the frames that were used according to their functionality.
 
 It's worth to mention that we are very happy and satisfied with the final result.
 
