--- a/Documentation/Binnacles/25th jan 2021.md
+++ b/Documentation/Binnacles/25th jan 2021.md
@@ -1,6 +1,6 @@
-Today we focused on finishing our article. According to commit this, we revised the different artifacts that were created in previous increments, we 
+Today we focused on finishing our article. According to this commit, we revised the different artifacts that were created in previous increments, we 
 analysed all the information and wrote the article emphazising all the stages of the project and the trazability between early stage of the project where
-we elicite requirements and the high-fidelity prototype. Finally we wrote our conclusions and our views about the signature.
+we elicite requirements and the high-fidelity prototype. Finally we wrote our conclusions and our views about the subject.
 
 # Pending
 * Finish the third increment document.
